most of padding now converted from hard code to dimen resource

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,9 @@
 <resources>
     <dimen name = "padding_from_carousel">2.dp</dimen>
     <dimen name = "padding_between_list_item">8.dp</dimen>
+    <dimen name = "padding_small">4.dp</dimen>
+    <dimen name = "padding_medium">8.dp</dimen>
+    <dimen name = "padding_large">16.dp</dimen>
+    <dimen name = "padding_top_home">32.dp</dimen>
+    <dimen name = "padding_bottom_home">8.dp</dimen>
 </resources>
