--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,31 +1,20 @@
-<vector
-    xmlns:android = "http://schemas.android.com/apk/res/android"
-    xmlns:aapt = "http://schemas.android.com/aapt"
-    android:width = "108dp"
-    android:height = "108dp"
-    android:viewportWidth = "108"
-    android:viewportHeight = "108">
-    <path android:pathData = "M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name = "android:fillColor">
-            <gradient
-                android:endX = "85.84757"
-                android:endY = "92.4963"
-                android:startX = "42.9492"
-                android:startY = "49.59793"
-                android:type = "linear">
-                <item
-                    android:color = "#44000000"
-                    android:offset = "0.0"/>
-                <item
-                    android:color = "#00000000"
-                    android:offset = "1.0"/>
-            </gradient>
-        </aapt:attr>
-    </path>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="108dp"
+    android:height="108dp"
+    android:viewportWidth="144"
+    android:viewportHeight="143.62">
+  <group android:scaleX="0.4"
+      android:scaleY="0.39894444"
+      android:translateX="43.2"
+      android:translateY="43.1618">
     <path
-        android:fillColor = "#FFFFFF"
-        android:fillType = "nonZero"
-        android:pathData = "M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth = "1"
-        android:strokeColor = "#00000000"/>
+        android:pathData="M77.37,93.19l-14.31,8.76c-5.59,3.43 -10.16,0.87 -10.16,-5.69V74.12C41.52,76.91 30.02,81.2 20.51,88.2C7.4,97.85 -8.28,121.09 5.11,136.72c3.7,4.32 9.49,6.9 15.16,6.9c0.01,0 88.25,0 89.27,0c4.07,0 3.57,-4.67 0.89,-6.36C91.27,125.11 81.74,106.1 77.37,93.19z"
+        android:fillColor="#00B4D9"/>
+    <path
+        android:pathData="M76.57,49.68l25.44,15.91c5.59,3.43 5.59,9.04 0,12.47l-16.9,10.56c11.65,26.31 33.79,36.63 45.63,41.53c9.41,3.9 13.25,-3.42 13.25,-6.39V19.89c0,-16.84 -13.16,-17.1 -17.24,-16.09C98.97,10.65 80.61,35.61 76.57,49.68z"
+        android:fillColor="#3C3F47"/>
+    <path
+        android:pathData="M4.24,86.33C20.26,70.77 41,68.24 52.89,65.97V47.38c0,-6.56 4.57,-9.12 10.16,-5.69l5.77,3.41C75.54,25.06 85.79,12.47 96.04,5.3c2.27,-1.58 2.72,-5.67 -1.19,-5.27H20.27C9.34,0.03 0.4,8.97 0.4,19.89c0,0 0,65.13 0,65.97C0.4,88.67 3.11,87.43 4.24,86.33z"
+        android:fillColor="#03B19F"/>
+  </group>
 </vector>
